<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/common_padding_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.MyTheme.MediumComponent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardview_image"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/logo_Description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_image"
                >
                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:text="@string/card_title"
                    style="@style/itemLarge"
                    />

                <TextView
                    android:id="@+id/card_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_mega"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:text="@string/price"
                    style="@style/itemLarge"/>
            </LinearLayout>
            <TextView
                android:id="@+id/card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/til_quantity"
                android:text="@string/description"
                android:lines="3"
                style="@style/itemMedium"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_quantity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/til_heitgh"
                app:helperText="@string/quantity"
                android:paddingStart="@dimen/common_padding_min"
                android:paddingEnd="@dimen/common_padding_min"
                android:layout_marginTop="@dimen/common_padding_min"
                app:shapeAppearance="@style/ShapeAppearance.MyTheme.SmallComponent"
                app:layout_constraintTop_toBottomOf="@id/card_description"
                android:textAlignment="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAlignment="center"
                    />
            </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/card_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding_min"
                    android:text="@string/add_to_cart"
                    app:layout_constraintTop_toBottomOf="@id/til_quantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:padding="@dimen/common_padding_min"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
